project/mail/rust/contacts/contacts-common/src/snapshots/contacts_common__contact_details__tests__full.snap
---
source: contacts/contacts-common/src/contact_details.rs
expression: get_vcard(full)
snapshot_kind: text
---
VCARD:
BEGIN:VCARD
VERSION:4.0
N:Last name;First name;;;
TEL;PREF=1:652522142
TEL;TYPE=other;PREF=2:blah
ADR;PREF=1:;;street;city;region;postal;country
ADR;PREF=2:;;aa;mep;;;
ADR;TYPE=work;PREF=3:;;;;AAAAAAAAAAAAA;;
ADR;TYPE=work;PREF=4:;; ;;;;
ADR;TYPE=other;PREF=5:;;;; ;;
BDAY:20250527
NOTE:I am a note
NOTE:I\nAm\nAnother\nNote
GENDER:Male
TZ:I use  btw
TZ:UTC + 1
ORG:Proton
LOGO:data:image/jpeg;base64\somelogo
LOGO:file://somelogo.jpeg
TITLE:🦀 Engineer
TITLE:🧜‍♀️🧜‍♀️
ANNIVERSARY:20250429
LANG:esperanto
URL:not a url
URL:mail.proton.me
MEMBER:big
PHOTO;PREF=1:https://my_site.me/cool_photo_link.png
PHOTO;PREF=1:data:image/svg+xml;base64\,some_photo
END:VCARD

---------------------------

Sorted fields:
Emails([])
Phones([Telephone { number: "652522142", tel_types: [] }, Telephone { number: "blah", tel_types: [String("other")] }])
Address([ContactDetailAddress { street: Some("street"), city: Some("city"), region: Some("region"), postal_code: Some("postal"), country: Some("country"), addr_type: [] }, ContactDetailAddress { street: Some("aa"), city: Some("mep"), region: Some(""), postal_code: Some(""), country: Some(""), addr_type: [] }, ContactDetailAddress { street: Some(""), city: Some(""), region: Some("AAAAAAAAAAAAA"), postal_code: Some(""), country: Some(""), addr_type: [Work] }, ContactDetailAddress { street: Some(" "), city: Some(""), region: Some(""), postal_code: Some(""), country: Some(""), addr_type: [Work] }, ContactDetailAddress { street: Some(""), city: Some(""), region: Some(" "), postal_code: Some(""), country: Some(""), addr_type: [String("other")] }])
Birthday(DateAndOrTime(DateAndOrTimeValue(DateTimeValue { year: Some(2025), month: Some(5), day: Some(27), hour: None, minute: None, second: None, zone: None })))
Notes(["I\nAm\nAnother\nNote", "I am a note"])
Anniversary(DateAndOrTime(DateAndOrTimeValue(DateTimeValue { year: Some(2025), month: Some(4), day: Some(29), hour: None, minute: None, second: None, zone: None })))
Gender(String("Male"))
Languages(["esperanto"])
TimeZones(["I use \u{f345} btw", "UTC + 1"])
Titles(["🦀 Engineer", "🧜\u{200d}♀\u{fe0f}🧜\u{200d}♀\u{fe0f}"])
Logos([Url { scheme: "data", cannot_be_a_base: true, username: "", password: None, host: None, port: None, path: "image/jpeg;base64\\somelogo", query: None, fragment: None }])
Photos([Url { scheme: "data", cannot_be_a_base: true, username: "", password: None, host: None, port: None, path: "image/svg+xml;base64\\,some_photo", query: None, fragment: None }, Url { scheme: "https", cannot_be_a_base: false, username: "", password: None, host: Some(Domain("my_site.me")), port: None, path: "/cool_photo_link.png", query: None, fragment: None }])
Organizations(["Proton"])
Members(["big"])
Urls([VCardUrl { url: Text("mail.proton.me"), url_type: [] }, VCardUrl { url: Text("not a url"), url_type: [] }])
