project/mail/rust/contacts/contacts-common/src/snapshots/contacts_common__contact_details__tests__mateusz.snap
---
source: contacts/contacts-common/src/contact_details.rs
expression: get_vcard(frodo)
---
VCARD:
BEGIN:VCARD
VERSION:4.0
FN;PREF=1:Mateusz Testing [free user]
LANG:Deutsch
LANG:Polish
LANG:English
TZ:Zürich
TITLE:bachelor
N:[free user];Mateusz Testing;;;
TEL;PREF=1;TYPE=home:+41772001010
TEL;PREF=2;TYPE=main:+41991009988
ADR;PREF=1:;;Langstrasse 100;Zürich;Zürich;8004;Switzerland
ADR;PREF=2:;;Marszałkowska 33;Warsaw;Masovian;01-000;Poland
ADR;PREF=3:;;Hagenholzstrasse 2;Zürich;Zürich;8205;Switzerland
BDAY:20050209
NOTE:Lorem ipsum dolor sit amet\, consetetur sadipscing elitr\, sed diam no
 numy eirmod tempor invidunt ut labore et dolore magna aliquyam erat\, sed d
 iam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
  clita kasd gubergren\, no sea takimata sanctus est Lorem ipsum dolor sit a
 met. 
NOTE:At vero eos et accusam et justo duo dolores et ea rebum. Stet clita ka
 sd gubergren\, no sea takimata sanctus est Lorem ipsum dolor sit amet.
GENDER:Male
ORG:Proton AG
MEMBER:member details
URL:https://gitlab.protontech.ch/apple/inbox/mail
ANNIVERSARY:20230102
ROLE:Software Engineer
ITEM1.EMAIL;PREF=1;TYPE=work:mateuszlovestesting_free@proton.me
ITEM2.EMAIL;TYPE=home;PREF=2:mateuszlovestesting@gmail.com
UID:proton-web-964e427a-4075-ac2e-9c04-c8cca3854d8a
PRODID;VALUE=TEXT:-//ProtonMail//ProtonMail vCard 1.0.0//EN
ITEM1.CATEGORIES:Private,Friends
ITEM2.CATEGORIES:Work
END:VCARD

---------------------------

Sorted fields:
Emails([ContactDetailsEmail { email_type: [Work], email: mXXXXXXXXXXXXXXXXXXXXXXX@XXXXXXXXX, groups: [ContactGroup { name: "Private", color: LabelColor("#4F66DF") }, ContactGroup { name: "Friends", color: LabelColor("#4F66DF") }] }, ContactDetailsEmail { email_type: [Home], email: mXXXXXXXXXXXXXXXXXX@XXXXXXXXX, groups: [ContactGroup { name: "Work", color: LabelColor("#9C89FF") }] }])
Phones([Telephone { number: "+41772001010", tel_types: [Home] }, Telephone { number: "+41991009988", tel_types: [String("main")] }])
Address([ContactDetailAddress { street: Some("Langstrasse 100"), city: Some("Zürich"), region: Some("Zürich"), postal_code: Some("8004"), country: Some("Switzerland"), addr_type: [] }, ContactDetailAddress { street: Some("Marszałkowska 33"), city: Some("Warsaw"), region: Some("Masovian"), postal_code: Some("01-000"), country: Some("Poland"), addr_type: [] }, ContactDetailAddress { street: Some("Hagenholzstrasse 2"), city: Some("Zürich"), region: Some("Zürich"), postal_code: Some("8205"), country: Some("Switzerland"), addr_type: [] }])
Birthday(DateAndOrTime(DateAndOrTimeValue(DateTimeValue { year: Some(2005), month: Some(2), day: Some(9), hour: None, minute: None, second: None, zone: None })))
Notes(["At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.", "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet."])
Anniversary(DateAndOrTime(DateAndOrTimeValue(DateTimeValue { year: Some(2023), month: Some(1), day: Some(2), hour: None, minute: None, second: None, zone: None })))
Gender(String("Male"))
Languages(["Deutsch", "English", "Polish"])
TimeZones(["Zürich"])
Titles(["bachelor"])
Roles(["Software Engineer"])
Organizations(["Proton AG"])
Members(["member details"])
Urls([VCardUrl { url: Http(Url { scheme: "https", cannot_be_a_base: false, username: "", password: None, host: Some(Domain("gitlab.protontech.ch")), port: None, path: "/apple/inbox/mail", query: None, fragment: None }), url_type: [] }])
