project/mail/rust/contacts/contacts-common/src/snapshots/contacts_common__contact_details__tests__real_contact.snap
---
source: contacts/contacts-common/src/contact_details.rs
expression: get_vcard(real)
snapshot_kind: text
---
VCARD:
BEGIN:VCARD
VERSION:4.0
URL:https://github.com/oriongonza
ORG:Proton AG
LANG:English
LANG:Spanish
N:González;Orión;;;
TEL;PREF=1:+34 652522142
BDAY:20001004
ADR;PREF=1:;;;Palencia;Castilla y León;;Spain
TZ:CET
ROLE:Software Engineer
END:VCARD

---------------------------

Sorted fields:
Emails([])
Phones([Telephone { number: "+34 652522142", tel_types: [] }])
Address([ContactDetailAddress { street: Some(""), city: Some("Palencia"), region: Some("Castilla y León"), postal_code: Some(""), country: Some("Spain"), addr_type: [] }])
Birthday(DateAndOrTime(DateAndOrTimeValue(DateTimeValue { year: Some(2000), month: Some(10), day: Some(4), hour: None, minute: None, second: None, zone: None })))
Languages(["English", "Spanish"])
TimeZones(["CET"])
Roles(["Software Engineer"])
Organizations(["Proton AG"])
Urls([VCardUrl { url: Http(Url { scheme: "https", cannot_be_a_base: false, username: "", password: None, host: Some(Domain("github.com")), port: None, path: "/oriongonza", query: None, fragment: None }), url_type: [] }])
